parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    ESPACIO
    FN

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     code -> INICIO cuerpo FIN
Rule 3     cuerpo -> variable
Rule 4     cuerpo -> expresion
Rule 5     cuerpo -> cuerpo_if
Rule 6     cuerpo_if -> variable
Rule 7     cuerpo_if -> expresion_if
Rule 8     expresion_if -> funcion_if expresion_if
Rule 9     expresion_if -> empty empty
Rule 10    funcion_if -> Move_if expresion_if
Rule 11    funcion_if -> Delay_if expresion_if
Rule 12    funcion_if -> Opera_if expresion_if
Rule 13    funcion_if -> Println_if expresion_if
Rule 14    variable -> variableDef1 cuerpo
Rule 15    variable -> variableDef2 cuerpo
Rule 16    variable -> empty empty
Rule 17    variableDef1 -> LET ID PUNTOCOMA
Rule 18    variableDef2 -> LET ID EQUAL INTEGER PUNTOCOMA
Rule 19    variableDef2 -> LET ID EQUAL BOOLEAN PUNTOCOMA
Rule 20    variableDef2 -> LET ID EQUAL STRING PUNTOCOMA
Rule 21    expresion -> INTEGER expresion
Rule 22    expresion -> STRING expresion
Rule 23    expresion -> funcion expresion
Rule 24    expresion -> ID expresion
Rule 25    expresion -> condicion expresion
Rule 26    expresion -> operador expresion
Rule 27    expresion -> main
Rule 28    expresion -> empty empty
Rule 29    operador -> SUMA
Rule 30    operador -> RESTA
Rule 31    operador -> MULTIPLICA
Rule 32    operador -> DIVIDE
Rule 33    operador -> POTENCIA
Rule 34    funcion -> Opera
Rule 35    funcion -> Move
Rule 36    funcion -> Delay
Rule 37    funcion -> If
Rule 38    funcion -> While
Rule 39    funcion -> For
Rule 40    funcion -> Loop
Rule 41    funcion -> Println
Rule 42    funcion -> Else
Rule 43    condicion -> Igual expresion
Rule 44    condicion -> Diferente expresion
Rule 45    condicion -> Mayor expresion
Rule 46    condicion -> Menor expresion
Rule 47    condicion -> Mayorigual expresion
Rule 48    condicion -> Menorigual expresion
Rule 49    Igual -> INTEGER IGUAL INTEGER
Rule 50    Igual -> ID IGUAL ID
Rule 51    Igual -> INTEGER IGUAL ID
Rule 52    Igual -> ID IGUAL INTEGER
Rule 53    Diferente -> INTEGER DIFERENTE INTEGER
Rule 54    Diferente -> ID DIFERENTE ID
Rule 55    Diferente -> INTEGER DIFERENTE ID
Rule 56    Diferente -> ID DIFERENTE INTEGER
Rule 57    Mayor -> INTEGER MAYOR INTEGER
Rule 58    Mayor -> ID MAYOR ID
Rule 59    Mayor -> INTEGER MAYOR ID
Rule 60    Mayor -> ID MAYOR INTEGER
Rule 61    Menor -> INTEGER MENOR INTEGER
Rule 62    Menor -> ID MENOR ID
Rule 63    Menor -> INTEGER MENOR ID
Rule 64    Menor -> ID MENOR INTEGER
Rule 65    Mayorigual -> INTEGER MAYORIGUAL INTEGER
Rule 66    Mayorigual -> ID MAYORIGUAL ID
Rule 67    Mayorigual -> INTEGER MAYORIGUAL ID
Rule 68    Mayorigual -> ID MAYORIGUAL INTEGER
Rule 69    Menorigual -> INTEGER MENORIGUAL INTEGER
Rule 70    Menorigual -> ID MENORIGUAL ID
Rule 71    Menorigual -> INTEGER MENORIGUAL ID
Rule 72    Menorigual -> ID MENORIGUAL INTEGER
Rule 73    Opera -> OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
Rule 74    Opera_if -> OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
Rule 75    Move -> MOVE LPAREN ID RPAREN PUNTOCOMA
Rule 76    Move_if -> MOVE LPAREN ID RPAREN PUNTOCOMA
Rule 77    Delay -> DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
Rule 78    Delay_if -> DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
Rule 79    If -> IF condicion LLAVEL cuerpo_if LLAVER
Rule 80    Else -> ELSE LLAVEL cuerpo LLAVER
Rule 81    While -> WHILE LPAREN condicion RPAREN LLAVEL cuerpo LLAVER
Rule 82    For -> FOR ID IN INTEGER PUNTOS INTEGER LLAVEL expresion LLAVER
Rule 83    Loop -> LOOP LLAVEL cuerpo LLAVER
Rule 84    Println -> PRINTLN LPAREN STRING RPAREN PUNTOCOMA
Rule 85    Println -> PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
Rule 86    Println -> PRINTLN LPAREN ID RPAREN PUNTOCOMA
Rule 87    Println -> PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA
Rule 88    Println_if -> PRINTLN LPAREN STRING RPAREN PUNTOCOMA
Rule 89    Println_if -> PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
Rule 90    Println_if -> PRINTLN LPAREN ID RPAREN PUNTOCOMA
Rule 91    Println_if -> PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA
Rule 92    main -> MAIN LPAREN RPAREN PUNTOCOMA
Rule 93    empty -> <empty>

Terminals, with rules where they appear

BOOLEAN              : 19 87 91
COMA                 : 73 73 74 74 77 78
COMENTARIO           : 
DELAY                : 77 78
DIFERENTE            : 53 54 55 56
DIVIDE               : 32
ELSE                 : 80
EQUAL                : 18 19 20
ESPACIO              : 
FIN                  : 2
FN                   : 
FOR                  : 82
ID                   : 17 18 19 20 24 50 50 51 52 54 54 55 56 58 58 59 60 62 62 63 64 66 66 67 68 70 70 71 72 75 76 82 86 90
IF                   : 79
IGUAL                : 49 50 51 52
IN                   : 82
INICIO               : 2
INTEGER              : 18 21 49 49 51 52 53 53 55 56 57 57 59 60 61 61 63 64 65 65 67 68 69 69 71 72 77 78 82 82 85 89
LET                  : 17 18 19 20
LLAVEL               : 79 80 81 82 83
LLAVER               : 79 80 81 82 83
LOOP                 : 83
LPAREN               : 73 74 75 76 77 78 81 84 85 86 87 88 89 90 91 92
MAIN                 : 92
MAYOR                : 57 58 59 60
MAYORIGUAL           : 65 66 67 68
MENOR                : 61 62 63 64
MENORIGUAL           : 69 70 71 72
MOVE                 : 75 76
MULTIPLICA           : 31
OPERA                : 73 74
POTENCIA             : 33
PRINTLN              : 84 85 86 87 88 89 90 91
PUNTOCOMA            : 17 18 19 20 73 74 75 76 77 78 84 85 86 87 88 89 90 91 92
PUNTOS               : 82
RESTA                : 30
RPAREN               : 73 74 75 76 77 78 81 84 85 86 87 88 89 90 91 92
STRING               : 20 22 77 78 84 88
SUMA                 : 29
WHILE                : 81
error                : 

Nonterminals, with rules where they appear

Delay                : 36
Delay_if             : 11
Diferente            : 44
Else                 : 42
For                  : 39
If                   : 37
Igual                : 43
Loop                 : 40
Mayor                : 45
Mayorigual           : 47
Menor                : 46
Menorigual           : 48
Move                 : 35
Move_if              : 10
Opera                : 34
Opera_if             : 12
Println              : 41
Println_if           : 13
Start                : 0
While                : 38
code                 : 1
condicion            : 25 79 81
cuerpo               : 2 14 15 80 81 83
cuerpo_if            : 5 79
empty                : 9 9 16 16 28 28
expresion            : 4 21 22 23 24 25 26 43 44 45 46 47 48 73 73 74 74 82
expresion_if         : 7 8 10 11 12 13
funcion              : 23
funcion_if           : 8
main                 : 27
operador             : 26 73 74
variable             : 3 6
variableDef1         : 14
variableDef2         : 15

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) code -> . INICIO cuerpo FIN

    INICIO          shift and go to state 3

    Start                          shift and go to state 1
    code                           shift and go to state 2

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) code -> INICIO . cuerpo FIN
    (3) cuerpo -> . variable
    (4) cuerpo -> . expresion
    (5) cuerpo -> . cuerpo_if
    (14) variable -> . variableDef1 cuerpo
    (15) variable -> . variableDef2 cuerpo
    (16) variable -> . empty empty
    (21) expresion -> . INTEGER expresion
    (22) expresion -> . STRING expresion
    (23) expresion -> . funcion expresion
    (24) expresion -> . ID expresion
    (25) expresion -> . condicion expresion
    (26) expresion -> . operador expresion
    (27) expresion -> . main
    (28) expresion -> . empty empty
    (6) cuerpo_if -> . variable
    (7) cuerpo_if -> . expresion_if
    (17) variableDef1 -> . LET ID PUNTOCOMA
    (18) variableDef2 -> . LET ID EQUAL INTEGER PUNTOCOMA
    (19) variableDef2 -> . LET ID EQUAL BOOLEAN PUNTOCOMA
    (20) variableDef2 -> . LET ID EQUAL STRING PUNTOCOMA
    (93) empty -> .
    (34) funcion -> . Opera
    (35) funcion -> . Move
    (36) funcion -> . Delay
    (37) funcion -> . If
    (38) funcion -> . While
    (39) funcion -> . For
    (40) funcion -> . Loop
    (41) funcion -> . Println
    (42) funcion -> . Else
    (43) condicion -> . Igual expresion
    (44) condicion -> . Diferente expresion
    (45) condicion -> . Mayor expresion
    (46) condicion -> . Menor expresion
    (47) condicion -> . Mayorigual expresion
    (48) condicion -> . Menorigual expresion
    (29) operador -> . SUMA
    (30) operador -> . RESTA
    (31) operador -> . MULTIPLICA
    (32) operador -> . DIVIDE
    (33) operador -> . POTENCIA
    (92) main -> . MAIN LPAREN RPAREN PUNTOCOMA
    (8) expresion_if -> . funcion_if expresion_if
    (9) expresion_if -> . empty empty
    (73) Opera -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (75) Move -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (77) Delay -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (79) If -> . IF condicion LLAVEL cuerpo_if LLAVER
    (81) While -> . WHILE LPAREN condicion RPAREN LLAVEL cuerpo LLAVER
    (82) For -> . FOR ID IN INTEGER PUNTOS INTEGER LLAVEL expresion LLAVER
    (83) Loop -> . LOOP LLAVEL cuerpo LLAVER
    (84) Println -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
    (85) Println -> . PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
    (86) Println -> . PRINTLN LPAREN ID RPAREN PUNTOCOMA
    (87) Println -> . PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA
    (80) Else -> . ELSE LLAVEL cuerpo LLAVER
    (49) Igual -> . INTEGER IGUAL INTEGER
    (50) Igual -> . ID IGUAL ID
    (51) Igual -> . INTEGER IGUAL ID
    (52) Igual -> . ID IGUAL INTEGER
    (53) Diferente -> . INTEGER DIFERENTE INTEGER
    (54) Diferente -> . ID DIFERENTE ID
    (55) Diferente -> . INTEGER DIFERENTE ID
    (56) Diferente -> . ID DIFERENTE INTEGER
    (57) Mayor -> . INTEGER MAYOR INTEGER
    (58) Mayor -> . ID MAYOR ID
    (59) Mayor -> . INTEGER MAYOR ID
    (60) Mayor -> . ID MAYOR INTEGER
    (61) Menor -> . INTEGER MENOR INTEGER
    (62) Menor -> . ID MENOR ID
    (63) Menor -> . INTEGER MENOR ID
    (64) Menor -> . ID MENOR INTEGER
    (65) Mayorigual -> . INTEGER MAYORIGUAL INTEGER
    (66) Mayorigual -> . ID MAYORIGUAL ID
    (67) Mayorigual -> . INTEGER MAYORIGUAL ID
    (68) Mayorigual -> . ID MAYORIGUAL INTEGER
    (69) Menorigual -> . INTEGER MENORIGUAL INTEGER
    (70) Menorigual -> . ID MENORIGUAL ID
    (71) Menorigual -> . INTEGER MENORIGUAL ID
    (72) Menorigual -> . ID MENORIGUAL INTEGER
    (10) funcion_if -> . Move_if expresion_if
    (11) funcion_if -> . Delay_if expresion_if
    (12) funcion_if -> . Opera_if expresion_if
    (13) funcion_if -> . Println_if expresion_if
    (76) Move_if -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (78) Delay_if -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (74) Opera_if -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (88) Println_if -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
    (89) Println_if -> . PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
    (90) Println_if -> . PRINTLN LPAREN ID RPAREN PUNTOCOMA
    (91) Println_if -> . PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA

    INTEGER         shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 14
    LET             shift and go to state 19
    FIN             reduce using rule 93 (empty -> .)
    SUMA            shift and go to state 35
    RESTA           shift and go to state 36
    MULTIPLICA      shift and go to state 37
    DIVIDE          shift and go to state 38
    POTENCIA        shift and go to state 39
    MAIN            shift and go to state 40
    OPERA           shift and go to state 42
    MOVE            shift and go to state 43
    DELAY           shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    LOOP            shift and go to state 48
    PRINTLN         shift and go to state 49
    ELSE            shift and go to state 50

    cuerpo                         shift and go to state 4
    variable                       shift and go to state 5
    expresion                      shift and go to state 6
    cuerpo_if                      shift and go to state 7
    variableDef1                   shift and go to state 8
    variableDef2                   shift and go to state 9
    empty                          shift and go to state 10
    funcion                        shift and go to state 13
    condicion                      shift and go to state 15
    operador                       shift and go to state 16
    main                           shift and go to state 17
    expresion_if                   shift and go to state 18
    Opera                          shift and go to state 20
    Move                           shift and go to state 21
    Delay                          shift and go to state 22
    If                             shift and go to state 23
    While                          shift and go to state 24
    For                            shift and go to state 25
    Loop                           shift and go to state 26
    Println                        shift and go to state 27
    Else                           shift and go to state 28
    Igual                          shift and go to state 29
    Diferente                      shift and go to state 30
    Mayor                          shift and go to state 31
    Menor                          shift and go to state 32
    Mayorigual                     shift and go to state 33
    Menorigual                     shift and go to state 34
    funcion_if                     shift and go to state 41
    Move_if                        shift and go to state 51
    Delay_if                       shift and go to state 52
    Opera_if                       shift and go to state 53
    Println_if                     shift and go to state 54

state 4

    (2) code -> INICIO cuerpo . FIN

    FIN             shift and go to state 55


state 5

    (3) cuerpo -> variable .
    (6) cuerpo_if -> variable .

  ! reduce/reduce conflict for FIN resolved using rule 3 (cuerpo -> variable .)
  ! reduce/reduce conflict for LLAVER resolved using rule 3 (cuerpo -> variable .)
    FIN             reduce using rule 3 (cuerpo -> variable .)
    LLAVER          reduce using rule 3 (cuerpo -> variable .)

  ! FIN             [ reduce using rule 6 (cuerpo_if -> variable .) ]
  ! LLAVER          [ reduce using rule 6 (cuerpo_if -> variable .) ]


state 6

    (4) cuerpo -> expresion .

    FIN             reduce using rule 4 (cuerpo -> expresion .)
    LLAVER          reduce using rule 4 (cuerpo -> expresion .)


state 7

    (5) cuerpo -> cuerpo_if .

    FIN             reduce using rule 5 (cuerpo -> cuerpo_if .)
    LLAVER          reduce using rule 5 (cuerpo -> cuerpo_if .)


state 8

    (14) variable -> variableDef1 . cuerpo
    (3) cuerpo -> . variable
    (4) cuerpo -> . expresion
    (5) cuerpo -> . cuerpo_if
    (14) variable -> . variableDef1 cuerpo
    (15) variable -> . variableDef2 cuerpo
    (16) variable -> . empty empty
    (21) expresion -> . INTEGER expresion
    (22) expresion -> . STRING expresion
    (23) expresion -> . funcion expresion
    (24) expresion -> . ID expresion
    (25) expresion -> . condicion expresion
    (26) expresion -> . operador expresion
    (27) expresion -> . main
    (28) expresion -> . empty empty
    (6) cuerpo_if -> . variable
    (7) cuerpo_if -> . expresion_if
    (17) variableDef1 -> . LET ID PUNTOCOMA
    (18) variableDef2 -> . LET ID EQUAL INTEGER PUNTOCOMA
    (19) variableDef2 -> . LET ID EQUAL BOOLEAN PUNTOCOMA
    (20) variableDef2 -> . LET ID EQUAL STRING PUNTOCOMA
    (93) empty -> .
    (34) funcion -> . Opera
    (35) funcion -> . Move
    (36) funcion -> . Delay
    (37) funcion -> . If
    (38) funcion -> . While
    (39) funcion -> . For
    (40) funcion -> . Loop
    (41) funcion -> . Println
    (42) funcion -> . Else
    (43) condicion -> . Igual expresion
    (44) condicion -> . Diferente expresion
    (45) condicion -> . Mayor expresion
    (46) condicion -> . Menor expresion
    (47) condicion -> . Mayorigual expresion
    (48) condicion -> . Menorigual expresion
    (29) operador -> . SUMA
    (30) operador -> . RESTA
    (31) operador -> . MULTIPLICA
    (32) operador -> . DIVIDE
    (33) operador -> . POTENCIA
    (92) main -> . MAIN LPAREN RPAREN PUNTOCOMA
    (8) expresion_if -> . funcion_if expresion_if
    (9) expresion_if -> . empty empty
    (73) Opera -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (75) Move -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (77) Delay -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (79) If -> . IF condicion LLAVEL cuerpo_if LLAVER
    (81) While -> . WHILE LPAREN condicion RPAREN LLAVEL cuerpo LLAVER
    (82) For -> . FOR ID IN INTEGER PUNTOS INTEGER LLAVEL expresion LLAVER
    (83) Loop -> . LOOP LLAVEL cuerpo LLAVER
    (84) Println -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
    (85) Println -> . PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
    (86) Println -> . PRINTLN LPAREN ID RPAREN PUNTOCOMA
    (87) Println -> . PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA
    (80) Else -> . ELSE LLAVEL cuerpo LLAVER
    (49) Igual -> . INTEGER IGUAL INTEGER
    (50) Igual -> . ID IGUAL ID
    (51) Igual -> . INTEGER IGUAL ID
    (52) Igual -> . ID IGUAL INTEGER
    (53) Diferente -> . INTEGER DIFERENTE INTEGER
    (54) Diferente -> . ID DIFERENTE ID
    (55) Diferente -> . INTEGER DIFERENTE ID
    (56) Diferente -> . ID DIFERENTE INTEGER
    (57) Mayor -> . INTEGER MAYOR INTEGER
    (58) Mayor -> . ID MAYOR ID
    (59) Mayor -> . INTEGER MAYOR ID
    (60) Mayor -> . ID MAYOR INTEGER
    (61) Menor -> . INTEGER MENOR INTEGER
    (62) Menor -> . ID MENOR ID
    (63) Menor -> . INTEGER MENOR ID
    (64) Menor -> . ID MENOR INTEGER
    (65) Mayorigual -> . INTEGER MAYORIGUAL INTEGER
    (66) Mayorigual -> . ID MAYORIGUAL ID
    (67) Mayorigual -> . INTEGER MAYORIGUAL ID
    (68) Mayorigual -> . ID MAYORIGUAL INTEGER
    (69) Menorigual -> . INTEGER MENORIGUAL INTEGER
    (70) Menorigual -> . ID MENORIGUAL ID
    (71) Menorigual -> . INTEGER MENORIGUAL ID
    (72) Menorigual -> . ID MENORIGUAL INTEGER
    (10) funcion_if -> . Move_if expresion_if
    (11) funcion_if -> . Delay_if expresion_if
    (12) funcion_if -> . Opera_if expresion_if
    (13) funcion_if -> . Println_if expresion_if
    (76) Move_if -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (78) Delay_if -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (74) Opera_if -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (88) Println_if -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
    (89) Println_if -> . PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
    (90) Println_if -> . PRINTLN LPAREN ID RPAREN PUNTOCOMA
    (91) Println_if -> . PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA

    INTEGER         shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 14
    LET             shift and go to state 19
    FIN             reduce using rule 93 (empty -> .)
    LLAVER          reduce using rule 93 (empty -> .)
    SUMA            shift and go to state 35
    RESTA           shift and go to state 36
    MULTIPLICA      shift and go to state 37
    DIVIDE          shift and go to state 38
    POTENCIA        shift and go to state 39
    MAIN            shift and go to state 40
    OPERA           shift and go to state 42
    MOVE            shift and go to state 43
    DELAY           shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    LOOP            shift and go to state 48
    PRINTLN         shift and go to state 49
    ELSE            shift and go to state 50

    variableDef1                   shift and go to state 8
    cuerpo                         shift and go to state 56
    variable                       shift and go to state 5
    expresion                      shift and go to state 6
    cuerpo_if                      shift and go to state 7
    variableDef2                   shift and go to state 9
    empty                          shift and go to state 10
    funcion                        shift and go to state 13
    condicion                      shift and go to state 15
    operador                       shift and go to state 16
    main                           shift and go to state 17
    expresion_if                   shift and go to state 18
    Opera                          shift and go to state 20
    Move                           shift and go to state 21
    Delay                          shift and go to state 22
    If                             shift and go to state 23
    While                          shift and go to state 24
    For                            shift and go to state 25
    Loop                           shift and go to state 26
    Println                        shift and go to state 27
    Else                           shift and go to state 28
    Igual                          shift and go to state 29
    Diferente                      shift and go to state 30
    Mayor                          shift and go to state 31
    Menor                          shift and go to state 32
    Mayorigual                     shift and go to state 33
    Menorigual                     shift and go to state 34
    funcion_if                     shift and go to state 41
    Move_if                        shift and go to state 51
    Delay_if                       shift and go to state 52
    Opera_if                       shift and go to state 53
    Println_if                     shift and go to state 54

state 9

    (15) variable -> variableDef2 . cuerpo
    (3) cuerpo -> . variable
    (4) cuerpo -> . expresion
    (5) cuerpo -> . cuerpo_if
    (14) variable -> . variableDef1 cuerpo
    (15) variable -> . variableDef2 cuerpo
    (16) variable -> . empty empty
    (21) expresion -> . INTEGER expresion
    (22) expresion -> . STRING expresion
    (23) expresion -> . funcion expresion
    (24) expresion -> . ID expresion
    (25) expresion -> . condicion expresion
    (26) expresion -> . operador expresion
    (27) expresion -> . main
    (28) expresion -> . empty empty
    (6) cuerpo_if -> . variable
    (7) cuerpo_if -> . expresion_if
    (17) variableDef1 -> . LET ID PUNTOCOMA
    (18) variableDef2 -> . LET ID EQUAL INTEGER PUNTOCOMA
    (19) variableDef2 -> . LET ID EQUAL BOOLEAN PUNTOCOMA
    (20) variableDef2 -> . LET ID EQUAL STRING PUNTOCOMA
    (93) empty -> .
    (34) funcion -> . Opera
    (35) funcion -> . Move
    (36) funcion -> . Delay
    (37) funcion -> . If
    (38) funcion -> . While
    (39) funcion -> . For
    (40) funcion -> . Loop
    (41) funcion -> . Println
    (42) funcion -> . Else
    (43) condicion -> . Igual expresion
    (44) condicion -> . Diferente expresion
    (45) condicion -> . Mayor expresion
    (46) condicion -> . Menor expresion
    (47) condicion -> . Mayorigual expresion
    (48) condicion -> . Menorigual expresion
    (29) operador -> . SUMA
    (30) operador -> . RESTA
    (31) operador -> . MULTIPLICA
    (32) operador -> . DIVIDE
    (33) operador -> . POTENCIA
    (92) main -> . MAIN LPAREN RPAREN PUNTOCOMA
    (8) expresion_if -> . funcion_if expresion_if
    (9) expresion_if -> . empty empty
    (73) Opera -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (75) Move -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (77) Delay -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (79) If -> . IF condicion LLAVEL cuerpo_if LLAVER
    (81) While -> . WHILE LPAREN condicion RPAREN LLAVEL cuerpo LLAVER
    (82) For -> . FOR ID IN INTEGER PUNTOS INTEGER LLAVEL expresion LLAVER
    (83) Loop -> . LOOP LLAVEL cuerpo LLAVER
    (84) Println -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
    (85) Println -> . PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
    (86) Println -> . PRINTLN LPAREN ID RPAREN PUNTOCOMA
    (87) Println -> . PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA
    (80) Else -> . ELSE LLAVEL cuerpo LLAVER
    (49) Igual -> . INTEGER IGUAL INTEGER
    (50) Igual -> . ID IGUAL ID
    (51) Igual -> . INTEGER IGUAL ID
    (52) Igual -> . ID IGUAL INTEGER
    (53) Diferente -> . INTEGER DIFERENTE INTEGER
    (54) Diferente -> . ID DIFERENTE ID
    (55) Diferente -> . INTEGER DIFERENTE ID
    (56) Diferente -> . ID DIFERENTE INTEGER
    (57) Mayor -> . INTEGER MAYOR INTEGER
    (58) Mayor -> . ID MAYOR ID
    (59) Mayor -> . INTEGER MAYOR ID
    (60) Mayor -> . ID MAYOR INTEGER
    (61) Menor -> . INTEGER MENOR INTEGER
    (62) Menor -> . ID MENOR ID
    (63) Menor -> . INTEGER MENOR ID
    (64) Menor -> . ID MENOR INTEGER
    (65) Mayorigual -> . INTEGER MAYORIGUAL INTEGER
    (66) Mayorigual -> . ID MAYORIGUAL ID
    (67) Mayorigual -> . INTEGER MAYORIGUAL ID
    (68) Mayorigual -> . ID MAYORIGUAL INTEGER
    (69) Menorigual -> . INTEGER MENORIGUAL INTEGER
    (70) Menorigual -> . ID MENORIGUAL ID
    (71) Menorigual -> . INTEGER MENORIGUAL ID
    (72) Menorigual -> . ID MENORIGUAL INTEGER
    (10) funcion_if -> . Move_if expresion_if
    (11) funcion_if -> . Delay_if expresion_if
    (12) funcion_if -> . Opera_if expresion_if
    (13) funcion_if -> . Println_if expresion_if
    (76) Move_if -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (78) Delay_if -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (74) Opera_if -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (88) Println_if -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
    (89) Println_if -> . PRINTLN LPAREN INTEGER RPAREN PUNTOCOMA
    (90) Println_if -> . PRINTLN LPAREN ID RPAREN PUNTOCOMA
    (91) Println_if -> . PRINTLN LPAREN BOOLEAN RPAREN PUNTOCOMA

    INTEGER         shift and go to state 11
    STRING          shift and go to state 12
    ID              shift and go to state 14
    LET             shift and go to state 19
    FIN             reduce using rule 93 (empty -> .)
    LLAVER          reduce using rule 93 (empty -> .)
    SUMA            shift and go to state 35
    RESTA           shift and go to state 36
    MULTIPLICA      shift and go to state 37
    DIVIDE          shift and go to state 38
    POTENCIA        shift and go to state 39
    MAIN            shift and go to state 40
    OPERA           shift and go to state 42
    MOVE            shift and go to state 43
    DELAY           shift and go to state 44
    IF              shift and go to state 45
    WHILE           shift and go to state 46
    FOR             shift and go to state 47
    LOOP            shift and go to state 48
    PRINTLN         shift and go to state 49
    ELSE            shift and go to state 50

    variableDef2                   shift and go to state 9
    cuerpo                         shift and go to state 57
    variable                       shift and go to state 5
    expresion                      shift and go to state 6
    cuerpo_if                      shift and go to state 7
    variableDef1                   shift and go to state 8
    empty                          shift and go to state 10
    funcion                        shift and go to state 13
    condicion                      shift and go to state 15
    operador                       shift and go to state 16
    main                           shift and go to state 17
    expresion_if                   shift and go to state 18
    Opera                          shift and go to state 20
    Move                           shift and go to state 21
    Delay                          shift and go to state 22
    If                             shift and go to state 23
    While                          shift and go to state 24
    For                            shift and go to state 25
    Loop                           shift and go to state 26
    Println                        shift and go to state 27
    Else                           shift and go to state 28
    Igual                          shift and go to state 29
    Diferente                      shift and go to state 30
    Mayor                          shift and go to state 31
    Menor                          shift and go to state 32
    Mayorigual                     shift and go to state 33
    Menorigual                     shift and go to state 34
    funcion_if                     shift and go to state 41
    Move_if                        shift and go to state 51
    Delay_if                       shift and go to state 52
    Opera_if                       shift and go to state 53
    Println_if                     shift and go to state 54

state 10

    (16) variable -> empty . empty
    (28) expresion -> empty . empty
    (9) expresion_if -> empty . empty
    (93) empty -> .

    FIN             reduce using rule 93 (empty -> .)
    LLAVER          reduce using rule 93 (empty -> .)

    empty                          shift and go to state 58

state 11

    (21) expresion -> INTEGER . expresion
    (49) Igual -> INTEGER . IGUAL INTEGER
    (51) Igual -> INTEGER . IGUAL ID
    (53) Diferente -> INTEGER . DIFERENTE INTEGER
    (55) Diferente -> INTEGER . DIFERENTE ID
    (57) Mayor -> INTEGER . MAYOR INTEGER
    (59) Mayor -> INTEGER . MAYOR ID
    (61) Menor -> INTEGER . MENOR INTEGER
    (63) Menor -> INTEGER . MENOR ID
    (65) Mayorigual -> INTEGER . MAYORIGUAL INTEGER
    (67) Mayorigual -> INTEGER . MAYORIGUAL ID
    (69) Menorigual -> INTEGER . MENORIGUAL INTEGER
    (71) Menorigual -> INTEGER . MENORIGUAL ID
    (21) expresion -> . INTEGER expresion
    (22) expresion -> . STRING expresion
    (23) expresion -> . funcion expresion
    (24) expresion -> . ID expresion
    (25) expresion -> . condicion expresion
    (26) expresion -> . operador expresion
    (27) expresion -> . main
    (28) expresion -> . empty empty
    (34) funcion -> . Opera
    (35) funcion -> . Move
    (36) funcion -> . Delay
    (37) funcion -> . If
    (38) funcion -> . While
    (39) funcion -> . For
    (40) funcion -> . Loop
    (41) funcion -> . Println
    (42) funcion -> . Else
    (43) condicion -> . Igual expresion
    (44) condicion -> . Diferente expresion
    (45) condicion -> . Mayor expresion
    (46) condicion -> . Menor expresion
    (47) condicion -> . Mayorigual expresion
    (48) condicion -> . Menorigual expresion
    (29) operador -> . SUMA
    (30) operador -> . RESTA
    (31) operador -> . MULTIPLICA
    (32) operador -> . DIVIDE
    (33) operador -> . POTENCIA
    (92) main -> . MAIN LPAREN RPAREN PUNTOCOMA
    (93) empty -> .
    (73) Opera -> . OPERA LPAREN operador COMA expresion COMA expresion RPAREN PUNTOCOMA
    (75) Move -> . MOVE LPAREN ID RPAREN PUNTOCOMA
    (77) Delay -> . DELAY LPAREN INTEGER COMA STRING RPAREN PUNTOCOMA
    (79) If -> . IF condicion LLAVEL cuerpo_if LLAVER
    (81) While -> . WHILE LPAREN condicion RPAREN LLAVEL cuerpo LLAVER
    (82) For -> . FOR ID IN INTEGER PUNTOS INTEGER LLAVEL expresion LLAVER
    (83) Loop -> . LOOP LLAVEL cuerpo LLAVER
    (84) Println -> . PRINTLN LPAREN STRING RPAREN PUNTOCOMA
